@@ -1,3 +1,7 @@
+2006-08-23  Brian Cameron  <brian.cameron@sun.com>
+
+	* daemon/gdm.h: Corrections to comments.
+
 2006-08-21  Brian Cameron  <brian.cameron@sun.com>
 
         * Release 2.15.10:
